fix: gulpfiles and extra

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <h1>HOUSE MUSIC FESTIVAL</h1>
             <nav class="navegacion-principal">
                 <a href="#lineup">Line Up</a>
-                <a href="#galeria">Galería</a>
-                <a href="#boletos">Boletos</a> 
+                <a href="#galeria">Galery</a>
+                <a href="#boletos">Tickets</a> 
             </nav>
         </div>
     </header>
@@ -27,7 +27,7 @@
         <div class="overlay">
             <div class="contenedor contenido-video">
                 <h2> <span class="house">HOUSE</span> Music Festival</h2>
-                <p>Noviembre 2022, Rivadavia, San Juan</p>
+                <p>November 2023, Rivadavia, San Juan</p>
             </div>
         </div>
         <video autoplay muted loop controls>
@@ -36,7 +36,7 @@
         </video>
     </div>
 
-    <section class="contenedor sobre-festival">
+    <section class="contenedor sobre-festival"> 
         <div class="imagen">
             <picture>
                 <source srcset="build/img/grande/4.avif" type= "image/avif">
@@ -47,7 +47,7 @@
 
         <div class="contenido-festival">
             <h2>HOUSE Music Festival </h2>
-            <p class="fecha">Noviembre 2022, Rivadavia, San Juan</p>
+            <p class="fecha">November 2023, Rivadavia, San Juan</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores doloremque neque cupiditate dolorum repellat necessitatibus, dolor aperiam omnis cum ullam consequatur libero, est quia similique dolore incidunt ratione laborum quod!</p>
         </div>
     </section>
@@ -55,11 +55,11 @@
     <section id="lineup" class="lineup">
         <h3>Line Up</h3>
 
-        <p class="dia">Viernes 05</p>
+        <p class="dia">Friday 05</p>
 
         <div class="escenarios-contenedor contenedor">
             <div class="escenario uno bg-amarillo">
-                <p class="nombre-escenario">Escenario Alternative House</p>
+                <p class="nombre-escenario">Stage Alternative House</p>
                 <ul class="calendario">
                     <li>
                         18:00 | <span>Benny Benasi</span>
@@ -80,13 +80,13 @@
                         23:00 | <span>Tiesto</span>
                     </li>
                     <li>
-                        01:00 | <span>Cierre</span>
+                        01:00 | <span>Closure</span>
                     </li>
                 </ul>
             </div>
 
             <div class="escenario dos bg-verde">
-                <p class="nombre-escenario">Escenario Deep House</p>
+                <p class="nombre-escenario">Stage Deep House</p>
                 <ul class="calendario">
                     <li>
                         18:00 | <span>Cassius</span>
@@ -107,16 +107,16 @@
                         23:00 | <span>Deadmau5</span>
                     </li>
                     <li>
-                        01:00 | <span>Cierre</span>
+                        01:00 | <span>Closure</span>
                     </li>
                 </ul>
             </div>
         </div>
 
-        <p class="dia">Sabado 06</p>
+        <p class="dia">Saturday 06</p>
         <div class="escenarios-contenedor contenedor">
             <div class="escenario dos bg-verde">
-                <p class="nombre-escenario">Escenario Alternative House</p>
+                <p class="nombre-escenario">Stage Alternative House</p>
                 
                 <ul class="calendario">
                     <li>
@@ -138,7 +138,7 @@
                         23:00 | <span>David Guetta</span>
                     </li>
                     <li>
-                        01:00 | <span>Cierre</span>
+                        01:00 | <span>Closure</span>
                     </li>
                 </ul>
             </div>
@@ -165,7 +165,7 @@
                         23:00 | <span>Avicii</span>
                     </li>
                     <li>
-                        01:00 | <span>Cierre</span>
+                        01:00 | <span>Closure</span>
                     </li>
                 </ul>
             </div>
@@ -184,14 +184,14 @@
         <div class="contenedor contenedor-boletos">
 
             <div class="basico pase">
-                <p class="pase-nombre">Pase 1 Día</p>
+                <p class="pase-nombre">Pass Day 1</p>
                 <header class="pase-header">
-                    <p>Incluye</p>
+                    <p>Include</p>
                 </header>
                 <div class="pase-body">
                     <ul>
-                        <li>Acceso a ambos escenarios</li>
-                        <li>Comida y Bebida</li>
+                        <li>Access to both Stage</li>
+                        <li>Food & Drinks</li>
                     </ul>
                 </div>
                 <footer class="pase-footer">
@@ -200,16 +200,16 @@
             </div>
             
             <div class="premium pase">
-                <p class="pase-nombre">Pase 2 Días</p>
+                <p class="pase-nombre">Pass Days 2</p>
                 <header class="pase-header">
-                    <p>Incluye</p>
+                    <p>Include</p>
                 </header>
                 <div class="pase-body">
                     <ul>
-                        <li>Acceso a ambos escenarios</li>
-                        <li>Comida y Bebida</li>
-                        <li>Camisa del Evento</li>
-                        <li>Acceso VIP</li>
+                        <li>Access to both Stage</li>
+                        <li>Food & Drinks</li>
+                        <li>Event Shirt</li>
+                        <li>VIP Access</li>
                     </ul>
                 </div>
                 <footer class="pase-footer">
@@ -222,7 +222,7 @@
     </section>
 
     <footer class="site-footer">
-        <p>HOUSE Music Festival. Todos los derechos reservados</p>
+        <p>HOUSE Music Festival. All rights reserved</p>
     </footer>
 
 
